# ansible-collection-config

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  galaxy-deploy.yml  galaxy.yml  pyproject.toml
.config/: ansible-lint.yml
.github/workflows/: ci.yml  release.yml
meta/: runtime.yml
plugins/: README.md
roles/nvim_packer/: README.md
roles/nvim_packer/defaults/: main.yml
roles/nvim_packer/handlers/: main.yml
roles/nvim_packer/meta/: main.yml
roles/nvim_packer/molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
roles/nvim_packer/tasks/: main.yml
roles/nvim_packer/tests/: test.yml
roles/nvim_packer/vars/: main.yml
