[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ansible-collection-config"
version = "0.0.5"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible = "^7.4.0"
molecule = {extras = ["podman"], version = "^4.0.4"}

[tool.poetry_bumpversion.file."galaxy.yml"]
search = 'version: {current_version}'
replace = 'version: {new_version}'
